--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,35 +1,34 @@
-name: PR Event Listener
+name: PR Webhook Trigger
 
 on:
-  issue_comment:
-    types: [created]
   pull_request:
     types: [opened, synchronize, reopened]
-  push:
+  pull_request_review_comment:
+    types: [created]
 
 jobs:
-  process_pr_events:
+  send_webhook:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Extract event details
-        run: echo "EVENT_PAYLOAD=$(jq -c . < $GITHUB_EVENT_PATH)" >> $GITHUB_ENV
-
-      - name: Generate Encrypted Token
-        env:
-          WEBHOOK_SECRET: ${{ secrets.WEBHOOK_SECRET }}
-          API_TOKEN: ${{ secrets.API_TOKEN }}  # Token to encrypt
+      - name: Encrypt GitHub Token
+        id: encrypt_token
         run: |
-          SIGNATURE=$(echo -n "$EVENT_PAYLOAD" | openssl dgst -sha256 -hmac "$WEBHOOK_SECRET" -binary | xxd -p)
-          ENCRYPTED_TOKEN=$(echo -n "$API_TOKEN" | openssl dgst -sha256 -hmac "$WEBHOOK_SECRET" | cut -d " " -f2)
-          
-          echo "SIGNATURE=$SIGNATURE" >> $GITHUB_ENV
-          echo "ENCRYPTED_TOKEN=$ENCRYPTED_TOKEN" >> $GITHUB_ENV
+          ENCRYPTED_TOKEN=$(echo -n "${{ secrets.GITHUB_TOKEN }}" | base64)
+          echo "encrypted_token=$ENCRYPTED_TOKEN" >> $GITHUB_ENV
 
-      - name: Call External API (With Encrypted Token)
+      - name: Generate HMAC Signature
+        id: generate_signature
+        run: |
+          SECRET="${{ secrets.WEBHOOK_SECRET }}"
+          PAYLOAD='${{ toJson(github.event) }}'
+          SIGNATURE="sha256=$(echo -n "$PAYLOAD" | openssl dgst -sha256 -hmac "$SECRET" | cut -d ' ' -f2)"
+          echo "signature=$SIGNATURE" >> $GITHUB_ENV
+
+      - name: Send Webhook Request
         run: |
           curl -X POST https://firstly-worthy-chamois.ngrok-free.app/github-webhook \
-          -H "Content-Type: application/json" \
-          -H "X-Hub-Signature-256: sha256=$SIGNATURE" \
-          -H "Authorization: Bearer $ENCRYPTED_TOKEN" \
-          -d "$EVENT_PAYLOAD"
+            -H "Content-Type: application/json" \
+            -H "X-Hub-Signature-256: ${{ env.signature }}" \
+            -H "Authorization: Bearer ${{ env.encrypted_token }}" \
+            -d '${{ toJson(github.event) }}'
