--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,16 +21,14 @@ jobs:
           API_TOKEN: ${{ secrets.API_TOKEN }}  # Token to encrypt
         run: |
           SIGNATURE=$(echo -n "$EVENT_PAYLOAD" | openssl dgst -sha256 -hmac "$WEBHOOK_SECRET" | cut -d " " -f2)
-          ENCRYPTED_TOKEN=$(echo -n "$API_TOKEN" | openssl enc -aes-256-cbc -a -salt -pbkdf2 -pass pass:"$WEBHOOK_SECRET")
           
           echo "SIGNATURE=$SIGNATURE" >> $GITHUB_ENV
-          echo "ENCRYPTED_TOKEN=$ENCRYPTED_TOKEN" >> $GITHUB_ENV
 
       - name: Call External API (With Encrypted Token)
         run: |
           curl -X POST https://firstly-worthy-chamois.ngrok-free.app/github-webhook \
           -H "Content-Type: application/json" \
           -H "X-Hub-Signature-256: sha256=$SIGNATURE" \
-          -H "Authorization: Bearer $ENCRYPTED_TOKEN" \
+          -H "Authorization: Bearer $API_TOKEN" \
           -d "$EVENT_PAYLOAD"
 
